[PACA-427] Add seq number to RDA tranform errors