@@ -52,7 +52,8 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -498,15 +499,25 @@ public class FissClaimTransformerTest {
           .setClaim(claimBuilder.build());
       transformer.transformClaim(changeBuilder.build());
       fail("should have thrown");
-    } catch (DataTransformer.TransformationException ex) {
-      assertEquals(
-          Arrays.asList(
+    } catch (DataTransformer.TransformationException actualException) {
+      List<DataTransformer.ErrorMessage> expectedErrors =
+          List.of(
               new DataTransformer.ErrorMessage("dcn", "invalid length: expected=[1,23] actual=0"),
               new DataTransformer.ErrorMessage("hicNo", "invalid length: expected=[1,12] actual=0"),
               new DataTransformer.ErrorMessage("currStatus", "no value set"),
               new DataTransformer.ErrorMessage("currLoc1", "no value set"),
-              new DataTransformer.ErrorMessage("currLoc2", "no value set")),
-          ex.getErrors());
+              new DataTransformer.ErrorMessage("currLoc2", "no value set"));
+
+      DataTransformer.TransformationException expectedException =
+          new DataTransformer.TransformationException(
+              String.format(
+                  "failed with 5 errors: seq=0 dcn= errors=[%s]",
+                  expectedErrors.stream()
+                      .map(e -> String.format("<'%s','%s'>", e.getFieldName(), e.getErrorMessage()))
+                      .collect(Collectors.joining(", "))),
+              expectedErrors);
+
+      assertEquals(expectedException, actualException);
     }
   }
 
